--- a/views/tmpl/admin/device/view-device.html
+++ b/views/tmpl/admin/device/view-device.html
@@ -44,12 +44,12 @@
 						</div>
 					</div> 
 					<div class="tile-body text-center bg-blue p-0"> 
-						<ul class="list-inline tbox m-0">
+						<!-- <ul class="list-inline tbox m-0">
 							<li class="tcol p-10">
-								<!-- <h2 class="m-0">{{details.device_slave_count || 0}}</h2>
-								<span class="text-transparent-white">Dependent Devices</span> -->
+								<h2 class="m-0">{{details.device_slave_count || 0}}</h2>
+								<span class="text-transparent-white">Dependent Devices</span>
 							</li>
-						</ul>
+						</ul> -->
 					</div>  
 				</section>
 			</div>
