--- a/views/tmpl/admin/door/edit-door.html
+++ b/views/tmpl/admin/door/edit-door.html
@@ -62,7 +62,7 @@
 								<div class="row">
 									<div class="form-group col-sm-6 col-md-4 first">
 										<label for="">Name <span class="text-danger">*</span></label>
-										<input type="text" name="door_name" id="" ng-model="doorData.door_name" class="form-control mb-10" placeholder="" required>
+										<input type="text" name="door_name" id="" ng-model="doorData.door_name" class="form-control mb-10" maxlength="30" placeholder="" required>
 									</div>
 									<div class="form-group col-sm-6 col-md-4 last">
 										<label for="">Facility <br/>
