--- a/elika-warehouse/views/tmpl/firmware/view-firmware.html
+++ b/elika-warehouse/views/tmpl/firmware/view-firmware.html
@@ -123,7 +123,7 @@
 											<!-- <a ng-click="open()" href="javascript:void(0);" class="text-danger text-sm" ><strong>Edit</strong></a> -->
 											<!-- <a class="text-danger text-sm" ><strong>Edit</strong></a>
 											</span></p> -->
-											<p><label>Description</label><br/>{{firmwareData.firmware_description }}</p>
+											<p><label>Description</label><span class="firmdes">{{firmwareData.firmware_description }}</span></p>
 										</div>
 									</div>
 								</div>
