removing resitration optiuon

--- a/views/tmpl/login.html
+++ b/views/tmpl/login.html
@@ -31,7 +31,7 @@
 				</div>
 			</form>
 			<div class="bg-slategray dker seagreen wrap-reset negmargin40 mt-40">
-				<p class="m-0"><a ui-sref="core.signup">Register a new membership</a></p>
+				<!-- <p class="m-0"><a ui-sref="core.signup">Register a new membership</a></p> -->
 			</div>
 		</div>
 	</div>
