--- a/views/tmpl/login.html
+++ b/views/tmpl/login.html
@@ -24,7 +24,7 @@
 
 				<div class="form-group text-left mt-20 mb-0">
 					<label class="checkbox checkbox-custom-alt inline-block" style="font-weight: 400;">
-						<input type="checkbox" ng-model="rememberme"><i></i> Remember me
+						<!-- <input type="checkbox" ng-model="rememberme"><i></i> Remember me -->
 					</label>
 					<a ui-sref="core.forgot-password" class="pull-right mt-10" style="font-weight: 400; font-size: 16px; color:#0eba8c;">Forgot Password?</a><br/>
 					<button type="submit" class="btn btn-grey b-0 br-2 mt-40 m-0-auto" ng-click="loginFunction()" ng-disabled='form.$invalid'>GO</button>
