Removed csv upload

--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -96,7 +96,7 @@
 											 ng-keyup="searchFunction($event)">
 											<button class="btn btn-default br-2-r" type="button" ng-click="searchFunction()">Search</button>
 										</div>
-										<div class="col-sm-4 col-md-3 profilephoto csvupload">
+										<!-- <div class="col-sm-4 col-md-3 profilephoto csvupload">
 											<div ng-controller="ModalDemo1Ctrl">
 												<script type="text/ng-template" id="myModalContent1.html">
 													<form name="form1" role="form">
@@ -122,7 +122,7 @@
 												</script>
 												<span ng-click="open()" class="group-span-filestyle input-group-btn"><label class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
 											</div>
-										</div>
+										</div> -->
 									</div>
 								</div>
 								<div class="col-sm-3 col-md-3">
