--- a/views/tmpl/admin/schedule/schedule-groups.html
+++ b/views/tmpl/admin/schedule/schedule-groups.html
@@ -55,7 +55,7 @@
 											<input type="text" class="form-control" placeholder="Search by text...." ng-model="searchText" ng-keypress="searchFunction($event)">
 											<button class="btn btn-default br-2-r" ng-click="searchFunction()" type="button">Search</button>
 										</div>
-										<div class="col-sm-4 col-md-3 profilephoto csvupload">
+										<!-- <div class="col-sm-4 col-md-3 profilephoto csvupload">
 											<div ng-controller="ModalDemo1Ctrl">
 												<script type="text/ng-template" id="myModalContent1.html">
 													<form name="form1" role="form">
@@ -81,7 +81,7 @@
 												</script>
 												<span ng-click="open()" class="group-span-filestyle input-group-btn"><label class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
 											</div>
-										</div>
+										</div> -->
 									</div>
 								</div>
 								<div class="col-sm-3 col-md-3">
