--- a/views/tmpl/admin/user/users.html
+++ b/views/tmpl/admin/user/users.html
@@ -106,7 +106,7 @@
 											<input type="text" class="form-control" placeholder="Search by text...." ng-keyup="searchFunction($event)" ng-model="searchText" >
 											<button class="btn btn-default br-2-r" type="button" ng-click="searchFunction()">Search</button>
 										</div>
-										<div class="col-sm-4 col-md-3 profilephoto csvupload">
+										<!-- <div class="col-sm-4 col-md-3 profilephoto csvupload">
 											<div ng-controller="ModalDemoCtrl">
 												<script type="text/ng-template" id="myModalContent.html">
 													<form name="form1" role="form">
@@ -126,7 +126,7 @@
 												</script>
 												<span ng-click="open()" class="group-span-filestyle input-group-btn"><label class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
 											</div>
-										</div>
+										</div> -->
 									</div>
 								</div>
 								<div class="col-sm-3 col-md-3">
