--- a/views/header.html
+++ b/views/header.html
@@ -157,6 +157,7 @@
 				<li><a ui-sref="app.admin.profile-settings"><i class="fa fa-cog" aria-hidden="true"></i> Profile Settings</a></li>
 				<li><a ui-sref="app.admin.help.faqs"><i class="fa fa-question" aria-hidden="true"></i> Help and FAQ's</a></li>
 				<li><a logout-btn><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>
+				<li class="version">Version 1.0.0</li>
 				<!-- logout-btn -->
 			</ul>
 		</li>
