--- a/elika-warehouse/views/tmpl/login.html
+++ b/elika-warehouse/views/tmpl/login.html
@@ -25,7 +25,7 @@
 					<label class="checkbox checkbox-custom-alt inline-block" style="font-weight: 400;">
 						<!-- <input type="checkbox" ng-model="rememberme"><i></i> Remember me -->
 					</label>
-					<a ui-sref="core.forgot-password" class="pull-right mt-10" style="font-weight: 400; font-size: 16px; color:#0eba8c;">Forgot Password?</a><br/>
+					<!-- <a ui-sref="core.forgot-password" class="pull-right mt-10" style="font-weight: 400; font-size: 16px; color:#0eba8c;">Forgot Password?</a><br/> -->
 					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto" ng-click="login()" ng-disabled='form.$invalid'>GO</button>
 				</div>
 			</form>
