--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -259,7 +259,7 @@
 														<h3 class="custom-font"><strong>Assigned Groups</strong></h3>
 														<ul class="controls">
 															<li class="addpopup">
-																<a ng-click="open()" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Groups</span></a>
+																<a ng-click="open()" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add disable-button" id="add_group_facility"><i class="fa fa-plus"></i> <span>Add Groups</span></a>
 															</li>
 														</ul>
 														<script type="text/ng-template" id="myModalContent.html">
