--- a/styles/custom.css
+++ b/styles/custom.css
@@ -1882,6 +1882,11 @@ md-card:hover .moreitemsondevice {
     border-bottom-left-radius: 6px;
 }
 
+#hpopup .form-control {
+    height: auto;
+    padding: 22px 0px 12px;
+}
+
 #hpopup .login-h2 {
     font-size: 28px;
     font-weight: 300;
@@ -1914,14 +1919,14 @@ md-card:hover .moreitemsondevice {
 }
 
 .page-login.core-new .form-group {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .page-login.core-new .form-control {
     font-size: 18px;
 }
 
-.page-login.core-new .form-group input::-webkit-input-placeholder {
+.page-login.core-new input::-webkit-input-placeholder {
     font-size: 18px;
     font-style: normal;
     -webkit-transition: all 0.3s ease;
@@ -2417,6 +2422,24 @@ span.edittxt {position: absolute;
     font-size: 16px;
 }
 
+.signup {
+	width: 650px;
+}
+
+.signup .overflow {
+	margin-bottom: 20px;
+}
+
+.signup form {
+	margin-left: -30px;
+}
+
+.signup input, .signupselect {
+	float: left;
+	width: 45%;
+	margin-left: 30px;
+}
+
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     .profilephoto #profilep-1, .profilephoto #profilep-2 {
         left: -85px
@@ -2425,10 +2448,6 @@ span.edittxt {position: absolute;
 		margin: 10px 0 12px;
 	}
 }
-
-
-
-
 /********** @media **********/
 @media only screen and (min-width: 1920px) {
 	.listview .glview md-card {
@@ -2803,6 +2822,12 @@ span.edittxt {position: absolute;
 	.slimscrolls {
 		max-height: 355px;
 		min-height: 355px;
+	}
+}
+
+@media only screen and (max-width: 1399px) {
+	.page-login.core-new { 
+		padding-left: 388px;
 	}
 }
 
@@ -3440,6 +3465,16 @@ span.edittxt {position: absolute;
 	.iconbx img {
 		width: auto;
 	}
+	.signup {
+		width: 550px;
+		padding: 30px;
+	}
+	.signup input, .signupselect {
+		width: 44%;
+	}
+	.signup .negmargin40 {
+		margin: 0px -30px -30px;
+	}
 }
 
 @media only screen and (max-width: 599px) {
@@ -3475,6 +3510,24 @@ span.edittxt {position: absolute;
 	#hpopup {
 		padding: 15px;
 		width: 350px;
+	}
+	.signup form {
+		margin-left: 0;
+	}
+	.signup .overflow {
+		margin-bottom: 0;
+	}
+	.signup .signuplabel {
+		margin-left: 0!important;
+	}
+	.signup input, .signupselect {
+		float: left;
+		width: 100%;
+		margin-left: 0;
+		margin-bottom: 20px;
+	}
+	.signupselect {
+		margin-bottom: 0;
 	}
 	.negmargin40 {
 		margin: 0px -15px -15px;
