--- a/views/tmpl/signup.html
+++ b/views/tmpl/signup.html
@@ -8,26 +8,54 @@
 		</div>
 	</div>
 	<div class="page page-core page-login core-new">
-		<div id="hpopup" class="container w-450 p-40 bg-white text-center login-box-shadow borderradius6">
+		<div id="hpopup" class="container signup p-40 bg-white text-center login-box-shadow borderradius6">
 			<h2 class="login-h2 text-greensea">Create a new account</h2>
 			<form name="form" class="form-validation mt-20" novalidate>
-				<div class="form-group">
-					<input type="text" class="form-control underline-input" placeholder="Full Name" ng-model="user.name" required>
+				<div class="overflow">
+					<input type="text" class="form-control underline-input" placeholder="First Name" ng-model="user.name" required>					
+					<input type="text" class="form-control underline-input" placeholder="Last Name" ng-model="user.name" required>					
 				</div>
-
-				<div class="form-group">
-					<input type="email" class="form-control underline-input" placeholder="Email" ng-model="user.email" required>
+				
+				<div class="overflow">
+					<input type="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.email" required>					
+					<input type="text" class="form-control underline-input" placeholder="Phone Number" ng-model="user.phone" required>
 				</div>
-
-				<div class="form-group">
+				
+				<div class="overflow">
+					<input type="text" class="form-control underline-input" placeholder="Location" ng-model="user.location" required>
+					<input type="text" class="form-control underline-input" placeholder="Zip Code" ng-model="user.zipcode" required>
+				</div>
+				
+				<div class="overflow">
 					<input type="password" placeholder="Password" class="form-control underline-input" ng-model="user.password" required>
-				</div>
-		  
-				<div class="form-group">
 					<input type="password" placeholder="Confirm Password" class="form-control underline-input" ng-model="user.confirmpassword" required>
 				</div>
 				
-				<div class="form-group text-left" style="margin-top: -25px;">        
+				<div class="overflow">
+					<div class="signupselect">
+						<select id="selectedQuestion1" name="selectedQuestion1" class="form-control underline-input mb-20">
+							<option value="?" selected="selected">Select Secret Question</option>
+							<option value="1" label="What was your favorite place to visit as a child?">What was your favourite place to visit as a child?</option>
+							<option value="2" label="Who is your favorite actor, musician, or artist?">Who is your favorite actor, musician, or artist?</option>
+							<option value="3" label="What is the name of your favorite pet?">What is the name of your favorite pet?</option>
+							<option value="4" label="In what city were you born?">In what city were you born?</option>
+							<option value="5" label="What high school did you attend?">What high school did you attend?</option>
+							<option value="6" label="What is the name of your first school?">What is the name of your first school?</option>
+							<option value="7" label="What is your favorite movie?">What is your favorite movie?</option>
+							<option value="8" label="What is your mother's maiden name?">What is your mother's maiden name?</option>
+							<option value="9" label="What street did you grow up on?">What street did you grow up on?</option>
+							<option value="10" label="What was the make of your first car?">What was the make of your first car?</option>
+							<option value="11" label="When is your anniversary?">When is your anniversary?</option>
+							<option value="12" label="What is your favorite color?">What is your favorite color?</option>
+							<option value="13" label="What is your father's middle name?">What is your father's middle name?</option>
+							<option value="14" label="What is the name of your first grade teacher?">What is the name of your first grade teacher?</option>
+							<option value="15" label="What was your high school mascot?">What was your high school mascot?</option>
+						</select>
+					</div>
+					<input type="text" class="form-control underline-input" placeholder="Answer" ng-model="user.answer" required>
+				</div>
+				
+				<div class="form-group text-left signuplabel" style="margin-left: 30px; margin-top: -15px;">        
 					<label class="checkbox checkbox-custom-alt inline-block" style="font-weight: 400; font-size: 16px;">
 						<input type="checkbox"><i></i> I agree to the <a href="javascript:;">Terms of Service</a> & <a href="javascript:;">Privacy Policy</a>
 					</label>
@@ -47,15 +75,14 @@
 		
 		$(window).on('resize',function(){location.reload();});
 		
-		if(winh>449 && winw > 1139) {
+		if(winh>700 && winw > 1139) {
 			var popuph = document.getElementById('hpopup').offsetHeight;
-			var mtop = popuph - 45;
-			$('.w-450').css({
+			$('.signup').css({
 				'position' : 'absolute',
 				'left' : '50%',
 				'top' : '50%',	        
-				'margin-top' : -mtop/2,
-				'margin-left' : -30,
+				'margin-top' : -popuph/2,
+				'margin-left' : -130,
 			});
 		}
 	});
