create new pages and latest work on feedback

--- a/elika-warehouse/views/tmpl/signup.html
+++ b/elika-warehouse/views/tmpl/signup.html
@@ -45,7 +45,7 @@
 		var winw = $(window).width();
 	    var winh = $(window).height();
 		
-		$(window).on('resize',function(){location.reload();});
+		/*$(window).on('resize',function(){location.reload();});*/
 		
 		if(winh>449 && winw > 919) {
 			var popuph = document.getElementById('hpopup').offsetHeight;
