--- a/views/header.html
+++ b/views/header.html
@@ -46,7 +46,7 @@
 				<span class="dropdown-toggle" uib-dropdown-toggle>Doors &nbsp;<fa name="angle-down"></fa></span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
 					<li><a ui-sref="app.admin.door.doors">Doors</a></li>
-					<!-- <li><a ui-sref="app.admin.door.door-groups">Door Groups</a></li> -->
+					<li><a ui-sref="app.admin.door.door-groups">Door Groups</a></li>
 				</ul>
 			</li>
 			<li class="dropdown" uib-dropdown>
@@ -76,6 +76,7 @@
 				</ul>
 			</li>
 			<li><a ui-sref="app.admin.activity"><span>Activity</span></a></li>
+			<li><a ui-sref="app.admin.contact"><span>Contact Us</span></a></li>
 			<!-- <li><a href=""><span>Reports</span></a></li> -->			
 		</ul>
 	</div> 
