--- a/views/tmpl/signup.html
+++ b/views/tmpl/signup.html
@@ -73,7 +73,7 @@
 		var winw = $(window).width();
 	    var winh = $(window).height();
 		
-		$(window).on('resize',function(){location.reload();});
+		/*$(window).on('resize',function(){location.reload();});*/
 		
 		if(winh>700 && winw > 1139) {
 			var popuph = document.getElementById('hpopup').offsetHeight;
