--- a/elika-warehouse/views/tmpl/forgot-password.html
+++ b/elika-warehouse/views/tmpl/forgot-password.html
@@ -57,7 +57,7 @@
 		var winw = $(window).width();
 	    var winh = $(window).height();
 		
-		$(window).on('resize',function(){location.reload();});
+		/*$(window).on('resize',function(){location.reload();});*/
 		
 		
 		if(winh>449 && winw > 919) {
