--- a/views/tmpl/login.html
+++ b/views/tmpl/login.html
@@ -41,7 +41,7 @@
 		var winw = $(window).width();
 		var winh = $(window).height();
 
-		$(window).on('resize', function () { location.reload(); });
+		/*$(window).on('resize', function () { location.reload(); });*/
 
 		if (winh > 449 && winw > 1139) {
 			var popuph = document.getElementById('hpopup').offsetHeight;
