Added clear and copy buttons on schedule

--- a/views/tmpl/admin/schedule/add-schedule.html
+++ b/views/tmpl/admin/schedule/add-schedule.html
@@ -52,7 +52,7 @@
 									<div class="copybtn">
 												<a class="btn btn-primary btn-slategray btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="copyMonFri()">Copy Mon -&gt; Mon-Fri</a>
 												<a class="btn btn-primary btn-slategray btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="copyMonSun()">Copy Mon -&gt; Mon-Sun</a>
-												<a class="btn btn-primary btn-slategray btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="clearAll()">Clear All</a>
+												<a class="btn btn-primary btn-slategray btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="clearAllSchedule()">Clear All</a>
 											</div>
 								</div>														
 								<div class="modal-body col-md-5" ng-controller="ModalDemoCtrl">
